# gnote

./: .gitignore  .gitlab-ci.yml  AUTHORS  MAINTAINERS  Makefile.am  NEWS  README  README.contrast  README.md  autogen.sh  config.h.in  configure.ac  gnote.doap  meson.build
data/: GNOME_GNoteApplet.server  GNOME_GNoteApplet.server.in  GNOME_GNoteApplet.server.in.in  GNOME_GnoteApplet.server.in.in  GNOME_GnoteApplet.xml  Makefile.am  UIManagerLayout.xml  gnote.1  gnote.desktop  gnote.desktop.in  gnote.desktop.in.in  gnote.schemas  gnote.schemas.in  meson.build  org.gnome.GNote.service  org.gnome.Gnote.appdata.xml.in  org.gnome.Gnote.desktop.in  org.gnome.Gnote.desktop.in.in  org.gnome.Gnote.search-provider.ini  org.gnome.Gnote.service.in  org.gnome.gnote.appdata.xml.in  org.gnome.gnote.desktop.in.in  org.gnome.gnote.gschema.xml  org.gnome.gnote.gschema.xml.in  org.gnome.gnote.panel-applet.in.in  org.gnome.panel.applet.GnoteAppletFactory.service.in  shortcuts-gnote.ui
data/appdata/: Makefile.am  gnote.appdata.xml.in  org.gnome.Gnote.appdata.xml.in  org.gnome.gnote.appdata.xml.in
data/icons/: Makefile.am  meson.build
data/ui/: Makefile.am  shortcuts-gnote.ui
help/: LINGUAS  Makefile.am  meson.build
help/C/: gnote-C.omf  gnote-addin-bugzillalink.page  gnote-addin-fixedwidth.page  gnote-addin-html.page  gnote-addin-notedirwatcher.page  gnote-addin-noteoftheday.page  gnote-addin-print.page  gnote-addin-readonly.page  gnote-addin-replacetitle.page  gnote-addin-specialnotes.page  gnote-addin-sync-gvfs.page  gnote-addin-sync-local.page  gnote-addin-sync-webdav.page  gnote-addin-tableofcontent.page  gnote-addin-tableofcontents.page  gnote-addin-timestamp.page  gnote-addin-underline.page  gnote-addins-preferences.page  gnote-bulleted-lists.page  gnote-common-problems.page  gnote-creating-notes.page  gnote-deleting-notes.page  gnote-editing-notes.page  gnote-hotkeys.page  gnote-introduction.page  gnote-links.page  gnote-notes-preferences.page  gnote-searching-notes.page  gnote-synchronization.page  gnote-template-notes.page  gnote-working-with-notebooks.page  gnote.xml  index.page
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/hu/: hu.po
help/id/: id.po
help/kk/: kk.po
help/lt/: lt.po
help/pl/: pl.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
src/: Makefile.am  abstractaddin.cpp  abstractaddin.hpp  actionmanager.cpp  actionmanager.hpp  addininfo.cpp  addininfo.hpp  addinmanager.cpp  addinmanager.hpp  addinpreferencefactory.cpp  addinpreferencefactory.hpp  applet.cpp  applicationaddin.hpp  contrast.cpp  contrast.hpp  debug.cpp  debug.hpp  gnote-applet.in  gnote.cpp  gnote.hpp  iactionmanager.cpp  iactionmanager.hpp  iconmanager.cpp  iconmanager.hpp  ignote.cpp  ignote.hpp  importaddin.hpp  itagmanager.cpp  itagmanager.hpp  keybinder.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindowaction.cpp  mainwindowaction.hpp  mainwindowembeds.cpp  mainwindowembeds.hpp  meson.build  noncopyable.hpp  note.cpp  (+55 more)
src/addins/: Makefile.am  addins.mk.in  meson.build
src/addins/backlinks/: Makefile.am  backlinkmenuitem.cpp  backlinkmenuitem.hpp  backlinks.desktop.in  backlinks.desktop.in.in  (+3 more)
src/base/: hash.hpp  inifile.cpp  inifile.hpp  macros.hpp  monitor.cpp  monitor.hpp
src/dbus/: Makefile.am  gnote-introspect.xml  iremotecontrol.hpp  meson.build  remotecontrol-client-glue.cpp  remotecontrol-client-glue.hpp  remotecontrol-glue.cpp  remotecontrol-glue.hpp  remotecontrol.cpp  remotecontrol.hpp  remotecontrolclient.cpp  remotecontrolclient.hpp  searchprovider.cpp  searchprovider.hpp
src/gnome_keyring/: genericitemdata.cpp  genericitemdata.hpp  itemdata.cpp  itemdata.hpp  keyringexception.cpp  keyringexception.hpp  netitemdata.cpp  netitemdata.hpp  noteitemdata.hpp  ring.cpp  ring.hpp
src/notebooks/: createnotebookdialog.cpp  createnotebookdialog.hpp  notebook.cpp  notebook.hpp  notebookapplicationaddin.cpp  notebookapplicationaddin.hpp  notebookmanager.cpp  notebookmanager.hpp  notebookmenuitem.cpp  notebookmenuitem.hpp  notebooknamepopover.cpp  notebooknamepopover.hpp  notebooknewnotemenuitem.cpp  notebooknewnotemenuitem.hpp  notebooknoteaddin.cpp  notebooknoteaddin.hpp  notebookstreeview.cpp  notebookstreeview.hpp  notebooksview.cpp  notebooksview.hpp  specialnotebooks.cpp  specialnotebooks.hpp
src/plugins/: Makefile.am  addins.mk.in  meson.build
src/sharp/: addinstreemodel.cpp  addinstreemodel.hpp  datetime.cpp  datetime.hpp  directory.cpp  directory.hpp  dynamicmodule.cpp  dynamicmodule.hpp  exception.cpp  exception.hpp  fileinfo.cpp  fileinfo.hpp  files.cpp  files.hpp  foreach.hpp  map.hpp  modulefactory.hpp  modulemanager.cpp  modulemanager.hpp  pluginsmodel.cpp  pluginsmodel.hpp  process.cpp  process.hpp  propertyeditor.cpp  propertyeditor.hpp  streamreader.cpp  streamreader.hpp  streamwriter.cpp  streamwriter.hpp  string.cpp  string.hpp  timespan.cpp  timespan.hpp  uri.cpp  uri.hpp  uuid.hpp  xml.cpp  xml.hpp  xmlconvert.cpp  xmlconvert.hpp  (+8 more)
src/synchronization/: filesystemsyncserver.cpp  filesystemsyncserver.hpp  fusesyncserviceaddin.cpp  fusesyncserviceaddin.hpp  gnotesyncclient.cpp  gnotesyncclient.hpp  gvfssyncservice.cpp  gvfssyncservice.hpp  gvfstransfer.cpp  gvfstransfer.hpp  isyncmanager.cpp  isyncmanager.hpp  manifestfile.cpp  manifestfile.hpp  silentui.cpp  silentui.hpp  syncdialog.cpp  syncdialog.hpp  syncmanager.cpp  syncmanager.hpp  syncserviceaddin.cpp  syncserviceaddin.hpp  syncui.cpp  syncui.hpp  syncutils.cpp  syncutils.hpp
src/test/: dttest.cpp  filestest.cpp  gnotesyncclienttest.cpp  meson.build  notemanagertest.cpp  notetest.cpp  runner.cpp  stringtest.cpp  testgnote.cpp  testgnote.hpp  testnote.cpp  testnote.hpp  testnotemanager.cpp  testnotemanager.hpp  testsyncaddin.cpp  testsyncaddin.hpp  testsyncclient.cpp  testsyncclient.hpp  testsyncmanager.cpp  testsyncmanager.hpp  testtagmanager.cpp  testtagmanager.hpp  testutils.cpp  testutils.hpp  trietest.cpp  uritest.cpp  xmlreadertest.cpp
(+360 files in other folders)
