
include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = gnote
DOC_FIGURES = \
	figures/add-notebook-search.png \
	figures/add-to-notebook.png \
	figures/delete-notebook.png \
	figures/gnote-new-note.png \
	figures/gnote-pindown.png \
	figures/gnote-pinup.png \
	figures/gnote-preferences-add-ins.png \
	figures/gnote-preferences-editing.png \
	figures/gnote-preferences-hotkeys.png \
	figures/gnote-preferences-synchronization.png \
	figures/gnote-search-all-notes.png \
	figures/gnote-template-note.png \
	figures/gnote-tools.png \
	figures/new-notebook.png \
	figures/notebook-icon.png \
	figures/note-template.png
DOC_PAGES = \
	gnote-addin-bugzillalink.page \
	gnote-addin-fixedwidth.page \
	gnote-addin-html.page \
	gnote-addin-noteoftheday.page \
	gnote-addin-print.page \
	gnote-addins-preferences.page \
	gnote-addin-replacetitle.page \
	gnote-addin-timestamp.page \
	gnote-addin-underline.page \
	gnote-bulleted-lists.page \
	gnote-common-problems.page \
	gnote-creating-notes.page \
	gnote-deleting-notes.page \
	gnote-editing-notes.page \
	gnote-hotkeys.page \
	gnote-introduction.page \
	gnote-links.page \
	gnote-notes-preferences.page \
	gnote-searching-notes.page \
	gnote-template-notes.page \
	gnote-working-with-notebooks.page \
	index.page
DOC_LINGUAS = cs da de es fr lt ru sl zh_CN
