@YELP_HELP_RULES@

HELP_ID = gnote
HELP_MEDIA = \
	figures/add-notebook-search.png \
	figures/add-to-notebook.png \
	figures/delete-notebook.png \
	figures/gnote-new-note.png \
	figures/gnote-pindown.png \
	figures/gnote-pinup.png \
	figures/gnote-preferences-add-ins.png \
	figures/gnote-preferences-editing.png \
	figures/gnote-preferences-hotkeys.png \
	figures/gnote-preferences-synchronization.png \
	figures/gnote-search-all-notes.png \
	figures/gnote-syncprefs-advanced.png \
	figures/gnote-syncprefs-local.png \
	figures/gnote-syncprefs-webdav.png \
	figures/gnote-sync-progress.png \
	figures/gnote-template-note.png \
	figures/gnote-tools.png \
	figures/notebook-icon.png \
	figures/note-template.png
HELP_FILES = \
	gnote-addin-bugzillalink.page \
	gnote-addin-fixedwidth.page \
	gnote-addin-html.page \
	gnote-addin-notedirwatcher.page \
	gnote-addin-noteoftheday.page \
	gnote-addin-print.page \
	gnote-addins-preferences.page \
	gnote-addin-replacetitle.page \
	gnote-addin-sync-local.page \
	gnote-addin-sync-webdav.page \
	gnote-addin-tableofcontent.page \
	gnote-addin-timestamp.page \
	gnote-addin-underline.page \
	gnote-bulleted-lists.page \
	gnote-common-problems.page \
	gnote-creating-notes.page \
	gnote-deleting-notes.page \
	gnote-editing-notes.page \
	gnote-hotkeys.page \
	gnote-introduction.page \
	gnote-links.page \
	gnote-notes-preferences.page \
	gnote-searching-notes.page \
	gnote-synchronization.page \
	gnote-template-notes.page \
	gnote-working-with-notebooks.page \
	index.page
HELP_LINGUAS = cs da de es fr lt ru sl zh_CN
